--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -27,11 +27,16 @@
     display: flex;
     justify-content: space-evenly;
   }
+
+  #middle{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
   
   #desc{
     padding: 30px;
     width: 40%;
-    display: inline-block
   }
   
   #navtitle{
@@ -41,6 +46,7 @@
     font-weight: 700;
     color: var(--dodgerblue);
     width: 40%;
+    text-align: center;
   }
   
   #navlist{
